--- a/index.html
+++ b/index.html
@@ -5,8 +5,105 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
+        </a>
+        <ul>
+          <li><a href="Blank.html">Студия</a></li>
+          <li><a href="Blank.html">Клиенты</a></li>
+          <li><a href="Catalog.html">Магазин</a></li>
+          <li><a href="Blank.html">Контакты</a></li>
+        </ul>
+        <a href="Blank.html">Корзина</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Долго, дорого, скрупулезно.</h1>
+      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+      <section>
+        <ul>
+          <li>
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <button type="button">Заказать</button>
+          </li>
+          <li>
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложения в AppStore и Google Play</p>
+            <button type="button">Заказать</button>
+          </li>
+          <li>
+            <h3>Презентация</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <button type="button">Заказать</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <h4>Выполняем заказы на разработку:</h4>
+          <p>Веб-сайтов любой сложности</p>
+          <p>Мобильных приложения для iOS и Android</p>
+          <p>Слайдшоу и видео для корпоративных презентаций</p>
+          <figure>
+            <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
+            <p>C 2004 года любим точность во всем:</p>
+            <ul>
+              <li>
+                146%
+                <p>Уровень самоотдачи</p>
+              </li>
+              <li>
+                100%
+                <p>Соблюдение сроков</p>
+              </li>
+              <li>
+                50%
+                <p>Минимальная предоплата</p>
+              </li>
+            </ul>
+          </figure>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/180x80" alt="Логотип академии">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/180x80" alt="Логотип барбершопа">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/180x80" alt="Логотип пинка">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/180x80" alt="Логотип мишки">
+          </li>
+        </ul>
+      </section>
+      <section>
+        <map name="">КАРТА</map>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <ul>
+          <li>
+            <a href="Blank.html">ВК</a>
+          </li>
+          <li>
+            <a href="Blank.html">фейс</a>
+          </li>
+          <li>
+            <a href="Blank.html">инст</a>
+          </li>
+        </ul>
+      </section>
+        <h2>Давайте дружить. это выгодно!</h2>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+    </footer>
   </body>
 </html>
