Исправил 1 часть задания. сделал 2

--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,120 @@
           <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
         </a>
         <ul>
-          <li><a href="Blank.html">Студия</a></li>
-          <li><a href="Blank.html">Клиенты</a></li>
-          <li><a href="Catalog.html">Магазин</a></li>
-          <li><a href="Blank.html">Контакты</a></li>
+          <li><a href="blank.html">Студия</a></li>
+          <li><a href="blank.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="Blank.html">Корзина</a>
+        <a href="blank.html">Корзина</a>
       </nav>
     </header>
-</body>
+    <main>
+      <section>
+        <h2>Фильтр выборки товара</h2>
+        <fieldset>
+          <legend>Стоимость</legend>
+          <ul>
+            <li>
+              <input type="radio" name="product-group" value="adaptive" id="filter-adaptive">
+              <label for="filter-adaptive">Адаптивная</label>
+            </li>
+            <li>
+              <input type="radio" name="product-group" value="fixed" id="filter-fixed" checked>
+              <label for="filter-fixed">Фиксированная</label>
+            </li>
+            <li>
+              <input type="radio" name="product-group" value="name" id="filter-name">
+              <label for="filter-name">Резиновая</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Особенности:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="slider" id="filter-slider" checked>
+              <label for="filter-slider">Слайдер</label>
+            </li>
+            <li>
+              <input type="checkbox" name="advantages" id="filter-advantages">
+              <label for="filter-advantages">Блок преимуществ</label>
+            </li>
+            <li>
+              <input type="checkbox" name="news" id="filter-news" checked>
+              <label for="filter-news">Новости</label>
+            </li>
+            <li>
+              <input type="checkbox" name="galдery" id="filter-galдery">
+              <label for="filter-galдery">Галерея</label>
+            </li>
+            <li>
+              <input type="checkbox" name="basket" id="filter-basket">
+              <label for="filter-basket">Корзина</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button type="submit">Показать</button>
+    </section>
+    <section>
+      <h2>Сортировка</h2>
+      <fieldset>
+        <legend>Сортировать</legend>
+        <ul>
+          <li>
+            <input type="radio" name="sorting-group" value="price" id="filter-price">
+            <label for="filter-price">по цене</label>
+          </li>
+          <li>
+            <input type="radio" name="sorting-group" value="type" id="filter-type" checked>
+            <label for="filter-type">по типу</label>
+          </li>
+          <li>
+            <input type="radio" name="sorting-group" value="rubber" id="filter-rubber">
+            <label for="filter-name">по названию</label>
+          </li>
+        </ul>
+      </fieldset>
+    </section>
+    <section>
+      <h2>Карточки товаров</h2>
+      <ul>
+        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Седона"></a></li>
+        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Пинк"></a></li>
+        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Бородинский"></a></li>
+        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Рукоделиие"></a></li>
+        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Обучение"></a></li>
+        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Квас"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Выборка страницы работ</h2>
+      <ul>
+        <li><a href="blank.html">1</a></li>
+        <li><a href="blank.html">2</a></li>
+        <li><a href="blank.html">3</a></li>
+        <li><a href="blank.html">Следующая</a></li>
+      </ul>
+    </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Сопособы связи с нами</h2>
+        <ul>
+          <li>
+            <a href="blank.html">ВКонтакте</a>
+          </li>
+          <li>
+            <a href="blank.html">Фейсбук</a>
+          </li>
+          <li>
+            <a href="blank.html">Инстаграм</a>
+          </li>
+        </ul>
+      </section>
+        <h2>Скидка подписчикам</h2>
+        <h2>Давайте дружить. это выгодно!</h2>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+    </footer>
+  </body>
 </html>
