--- a/blank.html
+++ b/blank.html
@@ -11,12 +11,12 @@
           <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
         </a>
         <ul>
-          <li><a href="Blank.html">Студия</a></li>
-          <li><a href="Blank.html">Клиенты</a></li>
-          <li><a href="Catalog.html">Магазин</a></li>
-          <li><a href="Blank.html">Контакты</a></li>
+          <li><a href="blank.html">Студия</a></li>
+          <li><a href="blank.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="Blank.html">Корзина</a>
+        <a href="blank.html">Корзина</a>
       </nav>
     </header>
 </body>
