--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        <a>
+        <a href="index.html">
           <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
         </a>
         <ul>
@@ -45,29 +45,29 @@
       <section>
         <h2>Визитная карточка студии</h2>
         <p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <h3>Выполняем заказы на разработку:</h3>
-            <p>Веб-сайтов любой сложности</p>
-            <p>Мобильных приложения для iOS и Android</p>
-            <p>Слайдшоу и видео для корпоративных презентаций</p>
-          <div>
-            <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
-            <p>C 2004 года любим точность во всем:</p>
-            <ul>
-              <li>
-                146%
-                <p>Уровень самоотдачи</p>
-              </li>
-              <li>
-                100%
-                <p>Соблюдение сроков</p>
-              </li>
-              <li>
-                50%
-                <p>Минимальная предоплата</p>
-              </li>
-            </ul>
-          </div>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <h3>Выполняем заказы на разработку:</h3>
+        <p>Веб-сайтов любой сложности</p>
+        <p>Мобильных приложения для iOS и Android</p>
+        <p>Слайдшоу и видео для корпоративных презентаций</p>
+        <div>
+          <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
+          <p>C 2004 года любим точность во всем:</p>
+          <ul>
+            <li>
+              146%
+              <p>Уровень самоотдачи</p>
+            </li>
+            <li>
+              100%
+              <p>Соблюдение сроков</p>
+            </li>
+            <li>
+              50%
+              <p>Минимальная предоплата</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
         <h2>Логотипы фирм заказавших наши услуги</h2>
