--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        <a>
+        <a href="index.html">
           <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
         </a>
         <ul>
@@ -22,82 +22,146 @@
     <main>
       <section>
         <h2>Фильтр выборки товара</h2>
+        <form action="">
         <fieldset>
           <legend>Стоимость</legend>
-          <ul>
-            <li>
-              <input type="radio" name="product-group" value="adaptive" id="filter-adaptive">
-              <label for="filter-adaptive">Адаптивная</label>
-            </li>
-            <li>
-              <input type="radio" name="product-group" value="fixed" id="filter-fixed" checked>
-              <label for="filter-fixed">Фиксированная</label>
-            </li>
-            <li>
-              <input type="radio" name="product-group" value="name" id="filter-name">
-              <label for="filter-name">Резиновая</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset>
-          <legend>Особенности:</legend>
-          <ul>
-            <li>
-              <input type="checkbox" name="slider" id="filter-slider" checked>
-              <label for="filter-slider">Слайдер</label>
-            </li>
-            <li>
-              <input type="checkbox" name="advantages" id="filter-advantages">
-              <label for="filter-advantages">Блок преимуществ</label>
-            </li>
-            <li>
-              <input type="checkbox" name="news" id="filter-news" checked>
-              <label for="filter-news">Новости</label>
-            </li>
-            <li>
-              <input type="checkbox" name="galдery" id="filter-galдery">
-              <label for="filter-galдery">Галерея</label>
-            </li>
-            <li>
-              <input type="checkbox" name="basket" id="filter-basket">
-              <label for="filter-basket">Корзина</label>
-            </li>
-          </ul>
-        </fieldset>
+            <ul>
+              <li>
+                <input type="radio" name="product-group" value="adaptive" id="filter-adaptive">
+                <label for="filter-adaptive">Адаптивная</label>
+              </li>
+              <li>
+                <input type="radio" name="product-group" value="fixed" id="filter-fixed" checked>
+                <label for="filter-fixed">Фиксированная</label>
+              </li>
+              <li>
+                <input type="radio" name="product-group" value="name" id="filter-name">
+                <label for="filter-name">Резиновая</label>
+              </li>
+            </ul>
+          </fieldset>
+        </form>
+        <form action="">
+          <fieldset>
+            <legend>Особенности:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="slider" id="filter-slider" checked>
+                <label for="filter-slider">Слайдер</label>
+              </li>
+              <li>
+                <input type="checkbox" name="advantages" id="filter-advantages">
+                <label for="filter-advantages">Блок преимуществ</label>
+              </li>
+              <li>
+                <input type="checkbox" name="news" id="filter-news" checked>
+                <label for="filter-news">Новости</label>
+              </li>
+              <li>
+                <input type="checkbox" name="gallery" id="filter-gallery">
+                <label for="filter-gallery">Галерея</label>
+              </li>
+              <li>
+                <input type="checkbox" name="basket" id="filter-basket">
+                <label for="filter-basket">Корзина</label>
+              </li>
+            </ul>
+          </fieldset>
         <button type="submit">Показать</button>
+      </form>
     </section>
     <section>
       <h2>Сортировка</h2>
-      <fieldset>
-        <legend>Сортировать</legend>
         <ul>
           <li>
             <input type="radio" name="sorting-group" value="price" id="filter-price">
-            <label for="filter-price">по цене</label>
+            <a for="filter-price">по цене</a>
           </li>
           <li>
             <input type="radio" name="sorting-group" value="type" id="filter-type" checked>
-            <label for="filter-type">по типу</label>
+            <a for="filter-type">по типу</a>
           </li>
           <li>
             <input type="radio" name="sorting-group" value="rubber" id="filter-rubber">
-            <label for="filter-name">по названию</label>
+            <a for="filter-name">по названию</a>
           </li>
         </ul>
-      </fieldset>
     </section>
     <section>
       <h2>Карточки товаров</h2>
-      <ul>
-        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Седона"></a></li>
-        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Пинк"></a></li>
-        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Бородинский"></a></li>
-        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Рукоделиие"></a></li>
-        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Обучение"></a></li>
-        <li><a href="blank.html"><img src="https://via.placeholder.com/180x80" alt="Квас"></a></li>
-      </ul>
-    </section>
-    <section>
+        <article>
+          <img src="https://via.placeholder.com/358x578" width="359" height="578" alt="Sedona">
+          <div>
+            <h3>
+              <a href="blank.html">Sedona</a>
+            </h3>
+            <p>
+              Информационный сайт
+              для туристов
+            </p>        
+            <a href="blank.html">9 900 ₽</a>
+          </div>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/358x578" width="359" height="578" alt="Pink App">
+          <div>
+            <h3>
+              <a href="blank.html">Pink App</a>
+            </h3>
+            <p>
+             Продуктовый лендинг приложения iOS и Android copy
+            </p>        
+            <a href="blank.html">9 900 ₽</a>
+          </div>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/358x578" width="359" height="578" alt="Barbershop">
+          <div>
+            <h3>
+              <a href="blank.html">Barbershop</a>
+            </h3>
+            <p>
+              Сайт салона красоты. Для мужчин, да.
+            </p>        
+            <a href="blank.html">9 900 ₽</a>
+          </div>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/358x578" width="359" height="578" alt="Mishka">
+          <div>
+            <h3>
+              <a href="blank.html">Mishka</a>
+            </h3>
+            <p>
+              Интернет магазин вязаных игрушек
+            </p>        
+            <a href="blank.html">9 900 ₽</a>
+          </div>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/358x578" width="359" height="578" alt="A plus">
+          <div>
+            <h3>
+              <a href="blank.html">A Plus</a>
+            </h3>
+            <p>
+              Лендинг курсов повышения квалификации
+            </p>        
+            <a href="blank.html">9 900 ₽</a>
+          </div>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/358x578" width="359" height="578" alt="Kvas">
+          <div>
+            <h3>
+              <a href="blank.html">КВАС</a>
+            </h3>
+            <p>
+              Промо-сайт производителя крафтового кваса
+            </p>        
+            <a href="blank.html">9 900 ₽</a>
+          </div>
+        </article>
       <h2>Выборка страницы работ</h2>
       <ul>
         <li><a href="blank.html">1</a></li>
