--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="icon" href="favicon.ico/32.ico">
   </head>
   <body>
     <header>
       <nav>
         <a href="index.html">
-          <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
+          <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип нердс">
         </a>
         <ul>
           <li><a href="blank.html">Студия</a></li>
@@ -16,7 +17,7 @@
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="blank.html">Корзина</a>
+        <a href="blank.html"><img src="img/cart-icon.png" alt="">Корзина</a>
       </nav>
     </header>
     <main>
@@ -26,16 +27,19 @@
         <h2>Прайс услуг</h2>
         <ul>
           <li>
+            <img src="img/illustration-1 1.png" width="300" height="146" alt="Веб-сайты">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a href="blank.html">Заказать</a>
           </li>
           <li>
+            <img src="img/illustration-2 1.png" width="300" height="146" alt="приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложения в AppStore и Google Play</p>
             <a href="blank.html">Заказать</a>
           </li>
           <li>
+            <img src="img/illustration-3 1.png" width="300" height="146" alt="презентация">
             <h3>Презентация</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <a href="blank.html">Заказать</a>
@@ -51,9 +55,10 @@
         <p>Мобильных приложения для iOS и Android</p>
         <p>Слайдшоу и видео для корпоративных презентаций</p>
         <div>
-          <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
+          <img src="img/nerds-illustration 1.png" alt="Логотип нердс">
           <p>C 2004 года любим точность во всем:</p>
           <ul>
+            
             <li>
               146%
               <p>Уровень самоотдачи</p>
@@ -73,16 +78,16 @@
         <h2>Логотипы фирм заказавших наши услуги</h2>
         <ul>
           <li>
-            <img src="https://via.placeholder.com/180x80" alt="Логотип академии">
+            <img src="img/group 5.png" alt="Логотип академии">
           </li>
           <li>
-            <img src="https://via.placeholder.com/180x80" alt="Логотип барбершопа">
+            <img src="img/logo-2 1.png" alt="Логотип барбершопа">
           </li>
           <li>
-            <img src="https://via.placeholder.com/180x80" alt="Логотип пинка">
+            <img src="img/Group 12.png" alt="Логотип пинка">
           </li>
           <li>
-            <img src="https://via.placeholder.com/180x80" alt="Логотип мишки">
+            <img src="img/logo-4 1.png" alt="Логотип мишки">
           </li>
         </ul>
       </section>
@@ -95,12 +100,15 @@
         <h2>Сопособы связи с нами</h2>
         <ul>
           <li>
+            <img src="img/vk-icon.png" alt="Вконтакте">
             <a href="blank.html">ВКонтакте</a>
           </li>
           <li>
+            <img src="img/fb-icon.png" alt="фейсбук">
             <a href="blank.html">Фейсбук</a>
           </li>
           <li>
+            <img src="img/insta-icon.png" alt="инстаграм">
             <a href="blank.html">Инстаграм</a>
           </li>
         </ul>
