--- a/blank.html
+++ b/blank.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/180x80" alt="Логотип нердс">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
         </a>
         <ul>
           <li><a href="blank.html">Студия</a></li>
