--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link rel="icon" href="favicon.ico/32.ico">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header>
       <nav>
         <a href="index.html">
-          <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип нердс">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
         </a>
         <ul>
           <li><a href="blank.html">Студия</a></li>
@@ -17,7 +17,7 @@
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="blank.html"><img src="img/cart-icon.png" alt=""> Корзина</a>
+        <a href="blank.html">Корзина</a>
       </nav>
     </header>
     <main>
@@ -73,20 +73,20 @@
       <h2>Сортировка</h2>
         <ul>
           <li>
-            <a for="filter-price">по цене</a>
+            <a href="blank.html">по цене</a>
           </li>
           <li>
-            <a for="filter-type">по типу</a>
+            <a href="blank.html">по типу</a>
           </li>
           <li>
-            <a for="filter-name">по названию</a>
+            <a href="blank.html">по названию</a>
           </li>
         </ul>
     </section>
     <section>
       <h2>Карточки товаров</h2>
         <article>
-          <img src="img/Mask Group-5.png" width="359" height="578" alt="Sedona">
+          <img src="img/sedona.png" width="359" height="578" alt="Туристический сайт">
           <div>
             <h3>
               <a href="blank.html">Sedona</a>
@@ -99,7 +99,7 @@
           </div>
         </article>
         <article>
-          <img src="img/Mask Group.png" width="359" height="578" alt="Pink App">
+          <img src="img/pinkapp.png" width="359" height="578" alt="Приложения для платформ">
           <div>
             <h3>
               <a href="blank.html">Pink App</a>
@@ -111,7 +111,7 @@
           </div>
         </article>
         <article>
-          <img src="img/Mask Group-3.png" width="359" height="578" alt="Barbershop">
+          <img src="img/barbershop.png" width="359" height="578" alt="Салон Красоты для мужчин">
           <div>
             <h3>
               <a href="blank.html">Barbershop</a>
@@ -123,7 +123,7 @@
           </div>
         </article>
         <article>
-          <img src="img/Mask Group-1.png" width="359" height="578" alt="Mishka">
+          <img src="img/mishka.png" width="359" height="578" alt="Вязаные игрушки">
           <div>
             <h3>
               <a href="blank.html">Mishka</a>
@@ -135,7 +135,7 @@
           </div>
         </article>
         <article>
-          <img src="img/Mask Group-4.png" width="359" height="578" alt="A plus">
+          <img src="img/aplus.png" width="359" height="578" alt="Курсы повышения квалификации">
           <div>
             <h3>
               <a href="blank.html">A Plus</a>
@@ -147,7 +147,7 @@
           </div>
         </article>
         <article>
-          <img src="img/Mask Group-2.png" width="359" height="578" alt="Kvas">
+          <img src="img/kvas.png" width="359" height="578" alt="Крафтовый квас">
           <div>
             <h3>
               <a href="blank.html">КВАС</a>
@@ -171,15 +171,15 @@
         <h2>Сопособы связи с нами</h2>
         <ul>
           <li>
-            <img src="img/vk-icon.png" alt="Вконтакте">
+            <img src="img/vk-icon.svg" alt="Вконтакте">
             <a href="blank.html">ВКонтакте</a>
           </li>
           <li>
-            <img src="img/fb-icon.png" alt="фейсбук">
+            <img src="img/fb-icon.svg" alt="фейсбук">
             <a href="blank.html">Фейсбук</a>
           </li>
           <li>
-            <img src="img/insta-icon.png" alt="инстаграм">
+            <img src="img/insta-icon.svg" alt="инстаграм">
             <a href="blank.html">Инстаграм</a>
           </li>
         </ul>
