доработки главной страницы

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
         <a href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
         </a>
-        <ul class="list">
+        <ul class="navigation_list">
           <li class="item_pagination"><a href="blank.html">Студия</a></li>
           <li class="item_pagination"><a href="blank.html">Клиенты</a></li>
           <li class="item_pagination"><a href="catalog.html">Магазин</a></li>
@@ -54,9 +54,11 @@
         <p class="article_slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p class="article_content">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3 class="article_meta">Выполняем заказы на разработку:</h3>
-        <p class="article_desc">Веб-сайтов любой сложности</p>
-        <p class="article_desc">Мобильных приложения для iOS и Android</p>
-        <p class="article_desc">Слайдшоу и видео для корпоративных презентаций</p>
+        <div class="article_description">
+          <p>Веб-сайтов любой сложности</p>
+          <p>Мобильных приложения для iOS и Android</p>
+          <p >Слайдшоу и видео для корпоративных презентаций</p>
+        </div>
         <div>
           <img src="img/picknerds.png" width="360" height="208" alt="Логотип нердс">
           <p>C 2004 года любим точность во всем:</p>
