--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <header>
@@ -14,17 +14,17 @@
         <a href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
         </a>
-        <ul>
-          <li><a href="blank.html">Студия</a></li>
-          <li><a href="blank.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="blank.html">Контакты</a></li>
+        <ul class="navigation_list">
+          <li class="item_pagination"><a href="blank.html">Студия</a></li>
+          <li class="item_pagination"><a href="blank.html">Клиенты</a></li>
+          <li class="item_pagination"><a href="catalog.html">Магазин</a></li>
+          <li class="item_pagination"><a href="blank.html">Контакты</a></li>
         </ul>
         <a href="blank.html">Корзина</a>
       </nav>
     </header>
     <main>
-      <section>
+      <section class="">
         <h2>Фильтр выборки товара</h2>
         <form action="">
           <fieldset>
