--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
@@ -8,44 +8,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   </head>
-  <body>
-    <header>
-      <nav>
-        <a href="index.html">
+  <body class="page_body">
+    <header class="main_header">
+      <nav class="main_navigation">
+        <a href="index.html" class="main_header_logo">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип нердс">
         </a>
         <ul class="navigation_list">
-          <li class="item_pagination"><a href="blank.html">Студия</a></li>
-          <li class="item_pagination"><a href="blank.html">Клиенты</a></li>
-          <li class="item_pagination"><a href="catalog.html">Магазин</a></li>
-          <li class="item_pagination"><a href="blank.html">Контакты</a></li>
+          <li><a href="blank.html">Студия</a></li>
+          <li><a href="blank.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="blank.html">Корзина</a>
+        <a href="blank.html" class="trash">Корзина</a>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <h1>Долго, дорого, скрупулезно.</h1>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-      <section>
+      <section class="features">
         <h2>Прайс услуг</h2>
-        <ul>
-          <li>
+        <ul class="features_list">
+          <li class="feature-item">
             <img src="img/websites.png" width="300" height="146" alt="Веб-сайты">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a href="blank.html">Заказать</a>
+            <a class="button button_web" href="blank.html">Заказать</a>
           </li>
-          <li>
+          <li class="feature-item">
             <img src="img/apps.png" width="300" height="146" alt="приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложения в AppStore и Google Play</p>
-            <a href="blank.html">Заказать</a>
+            <a class="button button_app" href="blank.html">Заказать</a>
           </li>
-          <li>
+          <li class="feature-item">
             <img src="img/presentation.png" width="300" height="146" alt="презентация">
             <h3>Презентация</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a href="blank.html">Заказать</a>
+            <a class="button button_presentation" href="blank.html">Заказать</a>
           </li>
         </ul>
       </section>
@@ -62,36 +62,36 @@
         <div>
           <img src="img/picknerds.png" width="360" height="208" alt="Логотип нердс">
           <p>C 2004 года любим точность во всем:</p>
-          <ul class="featurse">
-            <li>
+          <ul class="skills_list">
+            <li class="skills_item">
               146%
               <p>Уровень самоотдачи</p>
             </li>
-            <li>
+            <li class="skills_item">
               100%
               <p>Соблюдение сроков</p>
             </li>
-            <li>
+            <li class="skills_item">
               50%
               <p>Минимальная предоплата</p>
             </li>
           </ul>
         </div>
       </section>
-      <section>
+      <section class="firm">
         <h2>Логотипы фирм заказавших наши услуги</h2>
-        <ul class="logo_list">
-          <li>
+        <ul class="firm_list">
+          <li class="firm_logo">
             <img src="img/logohtml.svg" width="199" height="68" alt="Логотип академии">
           </li>
-          <li>
+          <li class="firm_logo">
             <img src="img/logobarbershop.png"
             width="209" height="90" alt="Логотип барбершопа">
           </li>
-          <li>
+          <li class="firm_logo">
             <img src="img/logopink.png" width="185" height="52" alt="Логотип пинка">
           </li>
-          <li>
+          <li class="firm_logo">
             <img src="img/logomishka.png" width="173" height="84" alt="Логотип мишки">
           </li>
         </ul>
@@ -100,21 +100,21 @@
         <h2>Карта нашей геопозиции</h2>
       </section>
     </main>
-    <footer>
-      <section>
+    <footer class="main_footer">
+      <section class="contacts">
         <h2>Сопособы связи с нами</h2>
-        <ul class="social">
+        <ul class="footer_social">
           <li>
             <img src="img/vk-icon.svg" alt="Вконтакте">
-            <a href="blank.html">ВКонтакте</a>
+            <a class="social_button" href="blank.html">ВКонтакте</a>
           </li>
           <li>
             <img src="img/fb-icon.svg" alt="фейсбук">
-            <a href="blank.html">Фейсбук</a>
+            <a class="social_button" href="blank.html">Фейсбук</a>
           </li>
           <li>
             <img src="img/insta-icon.svg" alt="инстаграм">
-            <a href="blank.html">Инстаграм</a>
+            <a class="social_button" href="blank.html">Инстаграм</a>
           </li>
         </ul>
       </section>
