--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   </head>
@@ -26,22 +27,23 @@
     <main class="container">
       <h1>Долго, дорого, скрупулезно.</h1>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+       <a class="info_nerds" href="blank.html">узнать больше</a>
       <section class="features">
         <h2>Прайс услуг</h2>
         <ul class="features_list">
-          <li class="feature-item">
+          <li class="feature_item">
             <img src="img/websites.png" width="300" height="146" alt="Веб-сайты">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button button_web" href="blank.html">Заказать</a>
           </li>
-          <li class="feature-item">
+          <li class="feature_item">
             <img src="img/apps.png" width="300" height="146" alt="приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложения в AppStore и Google Play</p>
             <a class="button button_app" href="blank.html">Заказать</a>
           </li>
-          <li class="feature-item">
+          <li class="feature_item">
             <img src="img/presentation.png" width="300" height="146" alt="презентация">
             <h3>Презентация</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
@@ -49,6 +51,9 @@
           </li>
         </ul>
       </section>
+
+<!-- ОСТАНОВОЧКА -->
+
       <section class="article">
         <h2>Визитная карточка студии</h2>
         <p class="article_slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
