--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   </head>
@@ -109,15 +109,15 @@
       <section class="contacts">
         <h2>Сопособы связи с нами</h2>
         <ul class="footer_social">
-          <li>
+          <li class="social_icon">
             <img src="img/vk-icon.svg" alt="Вконтакте">
             <a class="social_button" href="blank.html">ВКонтакте</a>
           </li>
-          <li>
+          <li class="social_icon">
             <img src="img/fb-icon.svg" alt="фейсбук">
             <a class="social_button" href="blank.html">Фейсбук</a>
           </li>
-          <li>
+          <li class="social_icon">
             <img src="img/insta-icon.svg" alt="инстаграм">
             <a class="social_button" href="blank.html">Инстаграм</a>
           </li>
